--- a/2021.06.15.md
+++ b/2021.06.15.md
@@ -5,6 +5,7 @@
 1. 주석 """  """ 여러줄 주석설정 가능 
 1. Pep 8 란 파이썬의 코드 작성 규칙 
 1. 파이썬에서는 무시할 값 _ 으로 대체 가능
+1. 파이썬에서 반복문 끝에 else 가능( 반복문이 반복무의 조건식에 의해 종료됬을시 실해)
 
 ## what to do 
 1. 파이썬 fstring 알아보기
